Revert "Fix composer header hidden by mobile browser (#2279)"
This reverts commit 1e37cc06eadf7d9ccb3e63d30bfcbf2c5e98fe1c.

--- a/less/forum/Composer.less
+++ b/less/forum/Composer.less
@@ -114,7 +114,7 @@
     background: @body-bg;
 
     &:not(.minimized) {
-      position: fixed;
+      position: absolute;
       top: 0;
       height: 350px !important;
       padding-top: @header-height-phone;
